# class-attendance-system

./: .gitignore  Makefile  README.md  attendance.sh  config.ini  logging.ini  pyproject.toml
classattendance/api/: __init__.py  app.py  helper.py  settings.py
classattendance/api/controller/: __init__.py  face_attendance.py  face_detection.py  face_enrollment.py  upload.py
classattendance/endpoint/: attendance_system.py
classattendance/entities/: api_res.py  attendance_req_res.py  face.py  file_detail.py  profile.py
classattendance/repo/: __init__.py  face_repo.py  profile_repo.py  sqllite_datasource.py
classattendance/service/: attendance_service.py  enrollment_service.py  face_detector.py
classattendance/utils/: config.py  logger.py  settings.py  singleton.py
examples/: config_example.py  logger_example.py
